--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 /* header */
 .header-bar {
-	background-color: red;
+	background-color: red !important;
 }
 
 /* title text */
 #header .header-bar .title h1 {
-	color: white;
-	text-shadow: 1px 1px 2px black;
+	color: white !important;
+	text-shadow: 1px 1px 2px black !important;
 }
 
 /* menu */
