--- a/main.css
+++ b/main.css
@@ -22,6 +22,5 @@ body {
 /* footer */
 .attribution {
 	color: white !important;
-	background-image: none !important;
-	background-color: #333;
+	background: #333 none !important;
 }
